--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,11 @@ django = "*"
 djangorestframework = "*"
 
 [dev-packages]
+black = "*"
+isort = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
